--- a/structure.html
+++ b/structure.html
@@ -4,7 +4,7 @@
         <title>My first page</title>
     </head>
     <body>
-        <h1>Hello Anurag students</h1>
+        <h1>Hello Anurag engineering students</h1>
         <p>department:CSE</p>
         <textarea placeholder="Address"></textarea>
         <div>
