--- a/structure.html
+++ b/structure.html
@@ -7,6 +7,14 @@
         <h1>Hello Anurag engineering students</h1>
         <p>department:CSE</p>
         <textarea placeholder="Address"></textarea>
+        <ul>
+            <li>apple</li>
+            <li>banana</li>
+            <li>orange</li>
+        </ul>
+        <ol>
+            
+        </ol>
         <div>
             <button>click me</button>
         </div>
