--- a/structure.html
+++ b/structure.html
@@ -13,7 +13,9 @@
             <li>orange</li>
         </ul>
         <ol>
-            
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
         </ol>
         <div>
             <button>click me</button>
